Barra de navegación administration

--- a/src/app/modules/administration/main/main.component.html
+++ b/src/app/modules/administration/main/main.component.html
@@ -1,5 +1,8 @@
-<div class="main">
+<div class="wrapper-main">
   <div class="lateral-menu">
-
+    <app-lateral-menu/>
+  </div>
+  <div class="body-main">
+    <router-outlet/>
   </div>
 </div>
