--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="login">
     <div class="left-login">
       <div class="left-login--header">
-        <img ngSrc="assets/images/login/logo.png" alt="" class="image-logo" height="102" width="176">
+        <img ngSrc="assets/images/login/logo.png" alt="" class="image-logo" height="102" width="97">
       </div>
       <div class="left-login--body">
         <form class="grid" autocomplete="off">
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="col-12">
-            <button class="btn">Iniciar sesión</button>
+            <button class="btn" (click)="goTo()">Iniciar sesión</button>
           </div>
         </form>
         <p class="new-user">¿Aún no tienes una cuenta? <span>Crea una</span></p>
