--- a/src/assets/styles/scss/layout/_forms.scss
+++ b/src/assets/styles/scss/layout/_forms.scss
@@ -30,6 +30,10 @@
 }
 
 .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
   width: 100%;
   background: theme-palette-color('color', 'primary');
   border: none;
