--- a/src/assets/styles/scss/theme/_theme.scss
+++ b/src/assets/styles/scss/theme/_theme.scss
@@ -27,7 +27,7 @@ $theme-palette: (
     'primary': #f755c1,
     'secondary': #ffd5f3,
     'terciary': #fffcfc,
-    'hover': #ff8787,
+    'hover': rgba(255, 135, 135, 0.15),
   ),
   background: (
     'primary': #F4F5F7,
